src/repl/snapshots/osp_cli__repl__help__tests__repl_help_compact_layout.snap
---
source: src/repl/help.rs
assertion_line: 334
expression: rendered
---
Usage:
  osp [OPTIONS]
Commands:
  help
Options:
  -h, --help
